# LMP-Probabilistic-Forecaster

./: .env.example  .gitignore  README.md  pyproject.toml
conf/: backtest.yaml  base.yaml  calibration.yaml  data_sources.yaml  model_deepar.yaml  model_tft.yaml  search_design.yaml  tracking.yaml  training.yaml  tuning.yaml  zones.yaml
docs/: backtesting_design.md  baseline_training.md  calibration_and_search_design.md  data_ingestion.md  engineering_notes.md  experiment_tracking.md  focused_tuning.md  panel_building.md  portable_tuning_workflow.md  real_baseline_training.md  real_pjm_ingestion.md  rolling_backtest_results.md
scripts/: bootstrap.ps1  build_panel_smoke.ps1  check_environment.ps1  export_tuning_package.ps1  import_tuning_results.ps1  pull_real_pjm_aep.ps1  pull_smoke_data.ps1  run_tests.ps1  train_baseline_smoke.ps1
src/lmp_forecaster/: __init__.py  cli.py
src/lmp_forecaster/config/: __init__.py  paths.py  (+1 more)
tests/: test_agent_memory_policy.py  test_backtest.py  test_backtest_metrics_reporting.py  test_backtest_runner.py  test_baseline_config.py  test_build_panel.py  test_calendar_features.py  test_calibration.py  test_cli_backtest.py  test_cli_backtest_execution.py  test_cli_calibration.py  test_cli_ingestion.py  test_cli_panel.py  test_cli_real_pjm.py  test_cli_search_design.py  test_cli_training.py  test_cli_tuning.py  test_cli_tuning_import.py  test_cli_tuning_package.py  test_data_quality.py  test_data_validation.py  test_forecast_schema.py  test_http_client.py  test_lag_features.py  test_metrics.py  test_mlflow_tracking.py  test_openmeteo_weather.py  test_panel_report.py  test_paths.py  test_pjm_api.py  test_pjm_backfill.py  test_pjm_lmp.py  test_promotion.py  test_real_cache_discovery.py  test_real_panel_building.py  test_results_report.py  test_search_design.py  test_settings.py  test_source_registry.py  test_splits.py  (+8 more)
(+39 files in other folders)
